@@ -3,6 +3,14 @@
 
 2006-06-20  Neil Spierling <sirvulcan@gmail.com>
 
+	* src/mod-memoserv.c: Added CANCEL command for cancelling memos
+	that you have sent, aslong as they have not been read yet.
+
+	* src/mod-memoserv.help: CANCEL entry plus tweaked some read
+	recipient to read reciept stuff.
+
+2006-06-20  Neil Spierling <sirvulcan@gmail.com>
+
 	* src/mod-memoserv.c: Redid the db stuff, it now writes users
 	settings and memos to the memoserv database.
 
